--- a/menu.html
+++ b/menu.html
@@ -7,12 +7,12 @@
       <img class="noselect" src="img/menu.png">
     </a>
     <div class="menu-items flex-row-center flex-item">
-      <a href="http://yenchiah.wordpress.com/">Projects</a>
-      <a href="file/CV.pdf">CV</a>
-      <a href="http://www.linkedin.com/pub/yen-chia-hsu/58/a26/716">LinkedIn</a>
-      <a href="https://twitter.com/yenchiah">Twitter</a>
-      <a href="https://scholar.google.com/citations?user=l7E5Z7AAAAAJ">Google Scholar</a>
-      <a href="http://github.com/yenchiah">GitHub</a>
+      <a href>Projects</a>
+      <a href="file/Cvit.pdf">CV</a>
+      <a href="https://www.linkedin.com/in/vivek-narayan-b01893241/">LinkedIn</a>
+      <a href="https://www.quora.com/profile/Vivek-Narayan-93">Quora</a>
+      <a href="https://scholar.google.com/citations?view_op=list_works&hl=en&user=x-eWnIoAAAAJ">Google Scholar</a>
+      <a href="https://github.com/Uviveknarayan">GitHub</a>
     </div>
   </div>
 </div>
