--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Yen-Chia Hsu</title>
+  <title>Vivek Narayan</title>
   <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
   <link href="css/frame.css" media="screen" rel="stylesheet" type="text/css" />
   <link href="css/controls.css" media="screen" rel="stylesheet" type="text/css" />
@@ -39,13 +39,13 @@
             <img class="image" id="me" src="img/me.jpeg">
           </div>
           <div class="flex-item flex-column">
-            <h2>Yen-Chia Hsu</h2>
+            <h2>Vivek Narayan</h2>
             <p class="text">
-              Assistant Professor<br>
-              hsu.yenchia (at) gmail.com<br>
-              y.c.hsu (at) uva.nl<br>
-              <a href="https://ivi.uva.nl" target="_blank">Informatics Institute</a><br>
-              <a href="https://www.uva.nl/en" target="_blank">University of Amsterdam</a>, The Netherlands<br>
+              Student <br>
+             viveknarayan.u (at) gmail.com<br>
+              u_vnarayan (at) cs.iitr.ac.in<br>
+              <a href="https://cse.iitr.ac.in/" target="_blank">Department of Computer Science and Engineering </a><br>
+              <a href="https://iitr.ac.in/" target="_blank">Indian Institute of Technology Roorkee</a>, India<br>
             </p>
           </div>
         </div>
@@ -54,25 +54,13 @@
             <h2>Biography</h2>
             <hr>
             <p class="text">
-              I am a computer scientist with an architectural design background.
-              <b>My research is focused on Community-Empowered Artificial Intelligence (AI), where I co-design, implement, deploy, and evaluate interactive AI systems that empower communities, especially in addressing environmental and social issues.</b>
-              In other words, I am a software infrastructure architect who builds interactive systems to support citizen empowerment.
+              I am a second year undergraduate student at IIT Roorkee with an interest in domains of Computer Science, Machine learning, Deep Learning and Medical Imaging
             </p>
             <p class="text">
-              Traditionally, scientists lead research to engage citizens in tackling environmental and social issues (e.g., air pollution) on a large scale.
-              I have proposed an alternative, <a href="https://arxiv.org/abs/1907.11260" target="_blank">Community Citizen Science</a> (CCS), to extend this science-oriented method to a hyper-local scale.
-              CCS aims to empower communities and scientists to produce scientific knowledge, represent their voices, address local concerns, and shape more equitable power relationships.
-              In this way, CCS advances the current science-oriented method by emphasizing continued community engagement after technology interventions.
-              In my research, I apply crowdsourcing and data visualization to engage communities in providing and exploring data.
-              Also, I utilize machine learning, computer vision, and data science to assist communities in extracting and explaining patterns in multiple types of large-scale data.
-              For more details, please refer to my <a href="file/CV.pdf" target="_blank">CV</a>,
-              <a href="file/yenchiah-research-v5.pdf" target="_blank">research statement</a>,
-              <a href="file/yenchiah-teaching-v6.pdf" target="_blank">teaching statement</a>,
-              and <a href="file/yenchiah-diversity-v3.pdf" target="_blank">diversity statement</a>.
-              For people who speak Mandarin Chinese, if you are interested in the CCS concept, here is the <a href="https://www.youtube.com/watch?v=kxxwc3fT-aA" target="_blank">video recording of my previous talk (in Mandarin Chinese)</a> in the National Tsing Hua University in Taiwan on early 2021.
-              Also, here is <a href="https://www.youtube.com/watch?v=vHfCpwQqdLA" target="_blank">another video recording of a talk (in English)</a> that I gave to the air quality working group at the European Citizen Science Association on late 2021.
-            </p>
-            <p class="text">
+              
+              For more details, please refer to my <a href="file/CVit.pdf" target="_blank">CV</a>,
+              <a href="file/research-statement.pdf" target="_blank">research statement</a>
+            <!--<p class="text">
               I am an Assistant Professor at the <a href="https://ivi.uva.nl" target="_blank">Informatics Institute</a>, <a href="https://www.uva.nl/en" target="_blank">University of Amsterdam</a>.
               Formerly, I was a Postdoctoral Researcher at the <a href="https://www.tudelft.nl/io/over-io/afdelingen/sustainable-design-engineering" target="_blank">Department of Sustainable Design Engineering</a>, <a href="https://www.tudelft.nl/en/ide/" target="_blank">Faculty of Industrial Design Engineering</a>, <a href="https://www.tudelft.nl/" target="_blank">TU Delft</a>, the Netherlands.
               Before TU Delft, I was a Project Scientist in the <a href="https://www.cmucreatelab.org/" target="_blank">CREATE Lab</a> at <a href="https://www.cmu.edu/" target="_blank">Carnegie Mellon University</a> (CMU), USA.
@@ -88,7 +76,7 @@
               For pronunciation, Yen is like the Japanese yen, and Chia is like "ja" when saying Ninja.
               My family name (Hsu) is hard to pronounce since the English system does not have such types of vocalization.
               The closest sound is "she," not "su."
-            </p>
+            </p>-->
             <h3>Table of Content</h3>
             <ul>
               <li><a href="#award">Awards and Honors</a></li>
