--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
               
               For more details, please refer to my <a href="file/CVit.pdf" target="_blank">CV</a>,
               <a href="file/research-statement.pdf" target="_blank">research statement</a>
+            </p>
             <!--<p class="text">
               I am an Assistant Professor at the <a href="https://ivi.uva.nl" target="_blank">Informatics Institute</a>, <a href="https://www.uva.nl/en" target="_blank">University of Amsterdam</a>.
               Formerly, I was a Postdoctoral Researcher at the <a href="https://www.tudelft.nl/io/over-io/afdelingen/sustainable-design-engineering" target="_blank">Department of Sustainable Design Engineering</a>, <a href="https://www.tudelft.nl/en/ide/" target="_blank">Faculty of Industrial Design Engineering</a>, <a href="https://www.tudelft.nl/" target="_blank">TU Delft</a>, the Netherlands.
@@ -80,14 +81,14 @@
             <h3>Table of Content</h3>
             <ul>
               <li><a href="#award">Awards and Honors</a></li>
-              <li><a href="#journal-paper">Referred Journal and Magazine Papers</a></li>
-              <li><a href="#conference-paper">Referred Conference Papers</a></li>
+              <li><a href="#journal-paper">Publications</a></li>
+              <!--<li><a href="#conference-paper">Referred Conference Papers</a></li>
               <li><a href="#wip-paper">Referred Posters, Works-in-Progress, and Workshop Paper</a></li>
               <li><a href="#other-paper">Other Publications</a></li>
               <li><a href="#feature-media">Featured Media and Book Coverage</a></li>
               <li><a href="#other-media">Other Media and Book Coverage</a></li>
               <li><a href="#tool">Released Open Source Tools</a></li>
-              <li><a href="#teaching">Teaching</a></li>
+              <li><a href="#teaching">Teaching</a></li>-->
               <li><a href="#project">Projects</a></li>
             </ul>
             <h2 id="award">Awards and Honors</h2>
