--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
             <hr>
             <p class="text">
               I am a second year undergraduate student at IIT Roorkee with an interest in domains of Computer Science, Machine learning, Deep Learning and Medical Imaging
-            </p>
+            I am currently working under Prof. Balasubramanian Raman of IIT Roorkee in the domain of medical imaging. I have written two research papers, both of which are under review currently. I have recieved the Reliance Scholarship for the year 2022.
+            I have also secured the Rakesh Agarwal Award for Excellence and ENCORE Award for outstanding academic and extra curricular activities in 2023. I also was a pre-finalist in IAEA Student Video Contest-2022 </p>
             <p class="text">
               
               For more details, please refer to my <a href="file/CVit.pdf" target="_blank">CV</a>,
@@ -127,8 +128,7 @@
               </li>
               <li>
                 <p class="text-small-margin">
-                  <a href="https://dl.acm.org/citation.cfm?id=3302293" target="_blank">Best Paper Honorable Mention Award (Top 2.5%, 7 out of 282 submissions)</a>.
-                  2019. ACM IUI Conference on Intelligent User Interfaces, USA.
+                  Secured 7th rank in the Gold division of Zuno Fellowship Program in January 2023
                 </p>
               </li>
               <li>
