--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <div class="content-table flex-column">
         <div class="flex-row">
           <div class="flex-item flex-column">
-            <img class="image" id="me" src="img/me.jpeg">
+            <img class="image" id="me" src="img/amritsarstreet.jpeg">
           </div>
           <div class="flex-item flex-column">
             <h2>Vivek Narayan</h2>
@@ -56,7 +56,7 @@
             <p class="text">
               I am a second year undergraduate student at IIT Roorkee with an interest in domains of Computer Science, Machine learning, Deep Learning and Medical Imaging
             I am currently working under Prof. Balasubramanian Raman of IIT Roorkee in the domain of medical imaging. I have written two research papers, both of which are under review currently. I have recieved the Reliance Scholarship for the year 2022.
-            I have also secured the Rakesh Agarwal Award for Excellence and ENCORE Award for outstanding academic and extra curricular activities in 2023. I also was a pre-finalist in IAEA Student Video Contest-2022 </p>
+            I have also secured the Rakesh Agarwal Award for Excellence and ENCORE Award for outstanding academic and extra curricular activities in 2023. I also was a pre-finalist in IAEA Student Video Contest-2022. </p>
             <p class="text">
               
               For more details, please refer to my <a href="file/CVit.pdf" target="_blank">CV</a>,
@@ -98,26 +98,24 @@
             <ol class="publication A-list">
               <li>
                 <p class="text-small-margin">
-                  Outstanding Student Academic Achievement.
-                  2005, 2006, 2007. Department of Architecture, National Cheng Kung University, Taiwan.
+                  Represented India and IIT Roorkee at pre-finals of IAEA Student Video Contest-2022.
                 </p>
               </li>
               <li>
                 <p class="text-small-margin">
-                  Third Prize, National Country House Design Competition.
-                  2008. Ministry of the Interior, Taiwan.
+                 Awarded Reliance Foundation Scholarship in the year 2022
                 </p>
               </li>
               <li>
                 <p class="text-small-margin">
-                  <a target="_blank" href="http://www.yestaiwan.com.tw/page06_5.html">Best New Artist</a>.
-                  2009. The National Golden Award for Architecture, Taiwan.
+                  <a target="_blank" href="https://www.iitr-heritagefund.org/">
+                  Awarded Rakesh Agrawal </a>Annual Excellence Award by IITR Heritage Foundation, an alumni initiative
                 </p>
               </li>
               <li>
                 <p class="text-small-margin">
-                  <a target="_blank" href="https://www.webbyawards.com/winners/2014/web/website-features-and-design/best-use-of-video-or-moving-image/timelapse/">Webby People's Voice Award, Best Use of Video or Moving Image</a>.
-                  2014. International Academy of Digital Arts and Sciences, USA.
+                  <a target="_blank" href="https://www.iitrencore.org/past-winners">Awarded Encore Award</a>.
+                  for outstanding curricular and extra-curricular activities
                 </p>
               </li>
               <li>
