--- a/index.html
+++ b/index.html
@@ -173,10 +173,10 @@
                 </p>
               </li>
             </ol>
-            <!--This list is reversed on the website due to reverse number listing-->
+            <!--This list is reversed on the website due to reverse number listing
             <h2 id="conference-paper">Referred Conference Papers</h2>
             <hr>
-            <!--This list is reversed on the website due to reverse number listing-->
+            This list is reversed on the website due to reverse number listing
             <ol class="publication C-list">
               <li>
                 <p class="text-small-margin">
@@ -276,7 +276,7 @@
             </ol>
             <h2 id="wip-paper">Referred Posters, Works-in-Progress, and Workshop Paper</h2>
             <hr>
-            <!--This list is reversed on the website due to reverse number listing-->
+            This list is reversed on the website due to reverse number listing
             <ol class="publication P-list">
               <li>
                 <p class="text-small-margin">
@@ -349,7 +349,7 @@
             </ol>
             <h2 id="other-paper">Other Publications</h2>
             <hr>
-            <!--This list is reversed on the website due to reverse number listing-->
+            This list is reversed on the website due to reverse number listing
             <ol class="publication O-list">
               <li>
                 <p class="text-small-margin">
@@ -436,7 +436,7 @@
             </ol>
             <h2 id="other-media">Other Media and Book Coverage</h2>
             <hr>
-            <!--This list is reversed on the website due to reverse number listing-->
+            This list is reversed on the website due to reverse number listing
             <ol class="publication M-list">
               <li>
                 <p class="text-small-margin">
@@ -873,7 +873,7 @@
             </ol>
             <h2 id="tool">Released Open Source Tools and Materials</h2>
             <hr>
-            <!--This list is reversed on the website due to reverse number listing-->
+           This list is reversed on the website due to reverse number listing
             <ol class="publication T-list">
               <li>
                 <p class="text-small-margin">
@@ -989,7 +989,7 @@
               </li>
             </ol>
           </div>
-          <!--Start Teaching and Projects-->
+         Start Teaching and Projects
           <div class="flex-row full-width">
             <div class="flex-item flex-column full-width">
               <h2 id="teaching">Teaching</h2>
@@ -998,7 +998,7 @@
                 <li>
                   <a href="https://multix.io/data-science-book-uva/" target="_blank">Data Science</a>, 2022/2023, University of Amsterdam
                 </li>
-              </ul>
+              </ul>-->
               <h2 id="project">Projects</h2>
               <hr>
             </div>
